# MCPStudio_ToolSDK

./: .gitignore  README-Handler.md  README-MCPServer.md  README-Quickly.md  README-REPO.md  README-SamplePlugin.md  README-Scripting.md  README.md  buildToolSDK.sh
SamplePlugin/: CMakeLists.txt  ToolCapabilities.json  main.m
SamplePlugin/bundle/: CMakeLists.txt  PluginMain.mm  ToolDescriptor.c  ToolEntryHandler.h  ToolEntryHandler.mm
SamplePlugin/dylib/: CMakeLists.txt  PluginMain.c  SamplePluginDyLib.cpp  SamplePluginDyLib.hpp  SamplePluginDyLibPriv.hpp  ToolDescriptor.c
Scripts/: analyzeDirectory.js  bootstrap.js  checkWithGcc.js  checkWithXcode.js  clangTools.js  cmakeBuild.js  data_pipeline_script.js  directoryCreate.js  directoryList.js  example_tool_script.js  fetchPrompt.js  fetchResource.js  fileDelete.js  fileExists.js  fileOpen.js  fileRead.js  fileSave.js  gccSettings.js  getGccInfo.js  getPathDocuments.js  getPathTemp.js  httpTools.js  http_test_script.js  http_tool_script.js  mkdir.js  plistBuddy.js  previewFile.js  qmakeBuild.js  sharedFunctions.js  shellCall.js  testDifferentMethods.js  testDownload.js  testFileOps.js  testLogging.js  testPipeline.js  testPost.js  test_script.js  tool_entry.js
Scripts/test-scripts/: testCustomHeaders.js  testDifferentMethods.js  testDownload.js  testFileOps.js  testGet.js  testHttpAll.js  testJSON.js  testLogging.js  testPaths.js  testPipeline.js  testPost.js
ToolJSONBridge/: CMakeLists.txt  ToolJSONBridge.h  ToolJSONBridge.mm
ToolSDK.xcodeproj/: project.pbxproj
ToolSDK.xcodeproj/project.xcworkspace/xcuserdata/eofmc.xcuserdatad/: UserInterfaceState.xcuserstate
ToolSDK.xcodeproj/xcshareddata/xcschemes/: SamplePluginDyLib.xcscheme  ToolSDK.xcscheme
ToolSDK.xcodeproj/xcuserdata/eofmc.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ToolSDK.xcodeproj/xcuserdata/eofmc.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: CustomToolExports.h  ToolABI.h  ToolLogging.h
